--- a/tasks/main-debian.yaml
+++ b/tasks/main-debian.yaml
@@ -4,7 +4,7 @@
 # Ensure Debian version is at least 9
 - name: Asymworks Rsyslog (Debian) | Check Version
   when: ansible_distribution_version is version('9', '<')
-  fail: msg='Unsupported Debian Version {{ ansible_distribution_version }} - Please Upgrade to Stretch or later'
+  ansible.builtin.fail: msg='Unsupported Debian Version {{ ansible_distribution_version }} - Please Upgrade to Stretch or later'
 
 # Install Stretch Backports
 - name: Asymworks Rsyslog (Debian) | Install Backports Repository
