--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Check out the codebase
         uses: actions/checkout@v2
         with:
-          path: asymworks.baseline
+          path: asymworks.rsyslog
 
       - name: Setup Python
         uses: actions/setup-python@v2
@@ -59,7 +59,7 @@ jobs:
       - name: Check out the codebase
         uses: actions/checkout@v2
         with:
-          path: asymworks.baseline
+          path: asymworks.rsyslog
 
       - name: Setup Python
         uses: actions/setup-python@v2
